<resources>
    <string name="app_name">SmartChat App</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="create_new_account">Create new Account</string>
    <string name="welcome_to_smartchat_app">Welcome to SmartChat App</string>
    <string name="this_is_main_page">This is main page</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="all_users">All Users</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="your_email">Your Email</string>

    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_smartchat_app">Hi there, I\'m using SmartChat App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="display_name">Display Name</string>
    <string name="default_status">Hi there, I\'m using SmartChat App</string>


</resources>
